# adaptive-soundtrack-ai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  infer.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
api/: __init__.py  main.py
configs/: __init__.py  config.py
logs/: train_log.json
notebooks/: 01_data_pipeline.py  02_train_conditional.py  04_evaluate.py
outputs/: eval_results.json
outputs/midi_examples/: example_electronic.mid  example_jazz.mid  example_pop_rock.mid  example_rap.mid
src/: __init__.py  dataset.py  ddpm.py  evaluate.py  logger.py  midi_utils.py  trainer.py  unet.py
tests/: test_smoke.py
